# P2PLib

./: CMakeLists.txt  README.md
demo/: demo.cc
include/: p2p.h  p2p_address_manager.h  p2p_config.h  p2p_msg.h  p2p_msg_regist.h  p2p_peer.h  p2p_peer_manager.h  p2p_state.h
qt-demo/: main.cpp  main_widget.cpp  main_widget.h  main_widget.ui
src/: p2p_address_manager.cc  p2p_peer.cc  p2p_peer_manager.cc  test.cc
